plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

dependencies {
    api 'com.epam.jdi:jdi-light-html:1.6.0'
    testImplementation 'io.qameta.allure:allure-testng:2.29.1'
    testImplementation 'org.testng:testng:7.8.0'
    testImplementation 'io.netty:netty-transport-native-epoll:4.1.78.Final'
    testImplementation 'io.netty:netty-transport-native-kqueue:4.1.78.Final'
}

ext {
    driver = 'chrome'
}

group = 'com.epam.jdi'
version = '1.0.0'
description = 'Template: JDI Light TestNG Gradle'
java.sourceCompatibility = JavaVersion.VERSION_11

processTestResources {
    with copySpec {
        exclude 'src/test/resources/test.properties'
    }
    with copySpec {
        from 'src/test/resources/test.properties'
        filter { String line ->
            line
                    .replace('${driver}', project.property('driver'))
        }
        duplicatesStrategy 'include'
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useTestNG()
}

tasks.withType(Test) {
    jvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
        '-XX:-OmitStackTraceInFastThrow'
    ]
}
